--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,8 @@ write_to = "src/SIFT_gs/version.py"
 
 [tool.mypy]
 ignore_missing_imports = true
+
+[tool.flake8]
+max-line-length = 88
+extend-ignore = ["E203"]
+exclude = ["venv"]
