--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,5 @@ __pycache__
 dask-worker-space
 ~*.*
 Register_FIB-SEM_stack_DASK_v2_Cryo_20161004_S3_Cell11 - Copy.ipynb
+
+src/SIFT_gs/version.py
